add CRUD for all 4 collections and add routes
