# routes/library.js
@@ -3,6 +3,9 @@ const router = express.Router();
 const libraryController = require('../controllers/library');
 
 router.get('/', libraryController.getLibrary);
-router.post('/', libraryController.addExerciseToLibrary);
+router.get('/:id', libraryController.getExerciseById);
+router.post('/', libraryController.postExerciseToLibrary);
+router.put('/:id', libraryController.putExerciseById);
+router.delete('/:id', libraryController.deleteExerciseById);
 
 module.exports = router;
