# routes/patients.js
@@ -3,19 +3,9 @@ const router = express.Router();
 const patientsController = require('../controllers/patients');
 
 router.get('/', patientsController.getPatients);
+router.get('/:id', patientsController.getPatientById);
+router.post('/', patientsController.postPatient);
+router.put('/:id', patientsController.putPatientById);
+router.delete('/:id', patientsController.deletePatientById);
 
 module.exports = router;
-
-//Example
-// const express = require('express');
-// const router = express.Router();
-
-// const contactsController = require('../controllers/contactsController');
-
-// router.get('/', contactsController.getAll);
-// router.get('/:id', contactsController.getSingle);
-// router.post('/', contactsController.postSingle);
-// router.delete('/:id', contactsController.deleteSingle);
-// router.put('/:id', contactsController.putSingle);
-
-// module.exports = router;
