# routes/therapists.js
@@ -3,5 +3,9 @@ const router = express.Router();
 const therapistsController = require('../controllers/therapists');
 
 router.get('/', therapistsController.getTherapists);
+router.get('/:id', therapistsController.getTherapistById);
+router.post('/', therapistsController.postTherapist);
+router.put('/:id', therapistsController.putTherapistById);
+router.delete('/:id', therapistsController.deleteTherapistById);
 
 module.exports = router;
